Change demo file to use JSdeliver CDN

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <pre id="result">
   Hi World
 </pre>
-<script src="https://[cdn]/build/asi-interceptor.min.js" polyfill></script>
+<script src="https://cdn.jsdelivr.net/gh/Advsol/jQuery-interceptor/build/asi-interceptor.min.js" polyfill></script>
 
 <script type="text/javascript">
 
